[project]
name = "mini-vllm"
version = "0.1.0"
description = "A small LLM inference engine built from scratch for systems learning."
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0",
  "transformers>=4.51",
  "safetensors>=0.5",
  "huggingface-hub>=0.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "slow: tests that download or run full model checkpoints",
]
